# WiLens

./: .gitignore  LICENSE  README.md  SECURITY.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: product-scope.md  todo.md  usage.md
docs/superpowers/plans/: 2026-06-20-corewlan-join.md
docs/superpowers/specs/: 2026-06-20-corewlan-join-design.md
src/: main.ts  qr.test.ts  qr.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  wifi.rs
web/: astro.config.mjs  package.json  wrangler.toml
web/src/layouts/: MainLayout.astro
web/src/pages/: index.astro
web/src/styles/: global.css
