[package]
name = "wilens"
version = "0.1.1"
description = "Scan a Wi-Fi QR code and join the network on macOS."
authors = ["huangbozhang"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Optimize the release build for size — this is a small utility, not a
# compute-bound app, so trading a little speed for a much smaller binary is worth it.
[profile.release]
opt-level = "z"   # optimize aggressively for size
lto = true        # link-time optimization across crates
codegen-units = 1 # let the optimizer see the whole crate at once
panic = "abort"   # drop unwinding tables
strip = true      # strip symbols from the binary

[lib]
name = "wilens_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11", features = [] }
tauri-plugin-log = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-core-wlan = { version = "0.3", features = ["CWWiFiClient", "CWInterface", "CWNetwork"] }
objc2-core-location = { version = "0.3", features = ["CLLocationManager"] }
